fix: change the width of the collapsed panel

--- a/src/components/view/navigation/styles/navigation.scss
+++ b/src/components/view/navigation/styles/navigation.scss
@@ -1,7 +1,7 @@
 .page-nav {
   position: sticky;
   top: 0;
-  width: 42px;
+  width: 40px;
   height: 100vh;
   white-space: nowrap;
   overflow: hidden;
